# easys

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  classes.html  concepts.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ba8c9ba97dc47dde1b0b8ad3adff7e0e.html  dir_ba8c9ba97dc47dde1b0b8ad3adff7e0e_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherits.html  menudata.js  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  pages.html
.github/workflows/: build-and-test.yml  cmake-build-and-test.yml  cmake-single-platform.yml  doxygen.yml
d0/d30/: md_README.html
d1/da2/: registry_8hpp.html  registry_8hpp_source.html
d2/d1b/: classEasys_1_1Registry-members.html
d3/dec/: entity_8hpp__incl.dot
d4/d07/: entity_8hpp__dep__incl.dot
d4/d0b/: sparse__set_8hpp.html  sparse__set_8hpp_source.html
d4/d28/: config_8hpp__dep__incl.dot
d4/d74/: classEasys_1_1ECS-members.html
d5/d4d/: mainpage_8dox.html
d5/ddd/: classEasys_1_1KeyNotFoundException-members.html
d6/d28/: classEasys_1_1SparseSet.html
d6/d8c/: conceptEasys_1_1UnsignedIntegral.html
d6/dba/: classEasys_1_1KeyNotFoundException.html
d6/dd9/: namespaceEasys.html
d7/d77/: sparse__set_8hpp__dep__incl.dot
d8/d2e/: sparse__set_8hpp__incl.dot
d8/d5a/: classEasys_1_1KeyNotFoundException__coll__graph.dot
d8/dfd/: config_8hpp.html  config_8hpp_source.html
d9/d50/: classEasys_1_1ECS.html
d9/dcd/: registry_8hpp__dep__incl.dot
da/d4c/: ecs_8hpp__incl.dot
da/d59/: classEasys_1_1Registry.html
da/ddd/: README_8md.html
db/de2/: entity_8hpp.html  entity_8hpp_source.html
dc/d61/: ecs_8hpp__dep__incl.dot
dc/dbe/: easys_8hpp.html  easys_8hpp_source.html
dc/dc6/: mainpage_8md.html
dd/d70/: registry_8hpp__incl.dot
dd/dac/: easys_8hpp__incl.dot
de/d8c/: ecs_8hpp.html  ecs_8hpp_source.html
df/d79/: classEasys_1_1SparseSet-members.html
docs/: mainpage.dox  mainpage.md
examples/: CMakeLists.txt  basic.cpp  basic2.cpp  simple_gameloop.cpp
include/: easys.hpp
include/easys/: config.hpp  easys.hpp  ecs.hpp  entity.hpp  registry.hpp  sparse_set.hpp
include/ecs/: ECSManager.hpp  Entity.hpp  SparseSet.hpp  SparseSetRegistry.hpp  VectorRegistry.hpp  ecs.hpp  registry.hpp  sparse_set.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  concepts_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  namespaces_0.js  pages_0.js  (+9 more)
src/: CMakeLists.txt  ECSManager.hpp  Entity.hpp
tests/: CMakeLists.txt  ECSManager.benchmark.cpp  ECSManager.test.cpp  Registry.test.cpp  ecs.benchmark.cpp  ecs.test.cpp  main.test.cpp  registry.test.cpp  sparse_set.test.cpp
